<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.wenshu.app.ui.home.HomeFragment"
        android:label="@string/tab_home" />

    <fragment
        android:id="@+id/nav_discover"
        android:name="com.wenshu.app.ui.discover.DiscoverFragment"
        android:label="@string/tab_discover" />

    <fragment
        android:id="@+id/nav_publish"
        android:name="com.wenshu.app.ui.publish.PublishFragment"
        android:label="@string/tab_publish" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.wenshu.app.ui.notifications.NotificationsFragment"
        android:label="@string/tab_notifications" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.wenshu.app.ui.profile.ProfileFragment"
        android:label="@string/tab_profile" />
</navigation>
